src/app/css/admin.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');

.admin-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  font-family: 'Poppins', sans-serif;
  padding: 1rem 1rem;
}

.admin-header {
  width: 100%;
  text-align: center;
  margin-bottom: 2rem;
}

.admin-title {
  color: var(--primaryBlue);
  font-weight: 700;
  font-size: 4rem;
  text-align: center;
  margin: 0 0;
}

.admin-button-box {
  margin-top: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.back-button {
  background: none;
  border: none;
  cursor: pointer;
  align-self: flex-start;
  margin-left: 30px;
  font-size: 3rem;
  font-weight: 700;
  color: var(--primaryBlue);
}

.back-button:hover {
  transform: scale(1.1);
}


/* upload page */

.upload-section {
  display: flex;
  justify-content: center;
  width: 100%;
}

.upload-form {
  display: flex;
  flex-direction: column;
  gap: 40px;
  padding: 30px;
  border-radius: 8px;
  color: var(--primaryBlue);
  font-weight: 700;
  font-size: 1.8rem;
  width: 98%;
}

.upload-row {
  display: grid;
  grid-template-columns: 1fr 2fr 20px;
  align-items: center;
  gap: 15px;
}

.file-input-wrapper {
  border: 3px solid var(--primaryBlue);
  border-radius: 6px;
  padding: 10px 15px 15px 15px;
  text-align: left;
}

.file-input {
  width: 100%;
  font-size: 1rem;
}

.upload-icon {
  font-size: 2rem;
  color: var(--primaryBlue);
  background: none;
  border: none;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5px 35px;
}

.upload-icon i {
  font-size: 2.4rem;
  color: var(--primaryBlue);
}

.upload-icon:hover {
  transform: scale(1.1);
}

/* search bar  */

.search-container {
  width: 100%;
  margin: 60px 0px 20px 15%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.search-row {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 10px;
  width: 100%;
  max-width: 600px;
}

.search-input {
  flex: 1;
  border: 3px solid var(--primaryBlue);
  border-radius: 4px;
  padding: 10px;
  font-size: 1.4rem;
  font-family: inherit;
  color: var(--textGrey);
  font-weight: 600;
}

.info-box{
  margin-top: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

/* edit groups page (manual add) */

.form-container {
    border: 3px solid var(--primaryBlue);
    padding: 10px 10px;
    height: auto;
    display: flex;
    justify-content: center;
    margin: 10px;
}

.manual-add-form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 100%;
  font-family: inherit;
  color: var(--primaryBlue);
  font-weight: 700;
  margin: 10px 30px;
}
.edit-user-form {
  display: flex;
  flex-direction: column;
  gap: 35px;
  width: 100%;
  font-family: inherit;
  color: var(--primaryBlue);
  font-weight: 700;
  margin: 20px 30px;
}

.form-row {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 30px;
  font-size: 25px;
  transition: all 0.2s ease-in-out;
}

.form-label {
  width: 240px;
  font-size: 25px;
  color: var(--primaryBlue);
  text-align: left;
}

.form-input {
  border: 4px solid var(--primaryBlue);
  padding: 10px;
  width: 400px;
  font-size: 1.4rem;
  font-family: inherit;
  color: var(--textGrey);
  font-weight: 400;
}

.form-input-large {
   width: 600px; 
  border: 4px solid var(--primaryBlue);
  padding: 10px;
  font-size: 1.4rem;
  font-family: inherit;
  color: var(--textGrey);
  font-weight: 400;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  resize: none;   
  overflow: hidden;
  height: auto;  
}

.form-select {
  border: 4px solid var(--primaryBlue);
  border-radius: 0px;
  padding: 10px;
  width: 650px;
  font-size: 1.4rem;
  font-family: inherit;
  color: var(--textGrey);
  font-weight: 600;
  background-color: white;
  margin: 20px 0px;
}

.checkbox-row {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  gap: 80px;
  margin: 0px 0px 20px 0px;
}

.checkbox-label {
  display: flex;
  align-items: center;
  gap: 15px;
  font-size: 25px;
}

.checkbox-input {
  width: 40px;
  height: 40px;
  border: 3px solid var(--primaryBlue);
}

.save-button-wrapper {
  display: flex;
  justify-content: flex-end;
  width: 100%;
  margin: 10px 0px;
}

/* edit groups page dropdown */

.edit-group-row {
 display: flex;
  flex-direction: row;
  flex-wrap: wrap;       
  gap: 0px 30px;       
  margin: 10px 20px 50px 20px;
}

.edit-group-pair {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 30px;            
  min-width: 200px;     
}    


.edit-group-label {
  width: auto;
  text-align: left;
  color: var(--primaryBlue);
  font-size: 25px;
}

.edit-group-input {
  border: 4px solid var(--primaryBlue);
  padding: 10px;
  min-width: 200px;
  font-size: 1.4rem;
  font-family: inherit;
  color: var(--textGrey);
  font-weight: 400;
}

/* add page */

.add-form {
  border: 5px solid var(--primaryRed);
  font-family: inherit;
  font-weight: bold;
  font-size: 25px;
  padding: 30px 20px;
  text-align: left;
  height: auto;
  width: 75%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.add-button-align {
  display: flex;
  justify-content: center;
  margin: 30px ;
  
}

/* View All Groups Page */

.info-pairs {
  display: flex;
  flex-wrap: wrap;       
  gap: 30px 50px;       
  margin-bottom: 20px;
}

.info-pair {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;            
  min-width: 200px;     
}

.info-label {
  color: var(--primaryBlue);
  font-weight: bold;
  font-size: 30px;
}

.info-value {
  color: var(--textGrey);
  font-weight: normal;
  font-size: 30px;
}

